Initial Debian package

--- a/README
+++ b/README
@@ -15,20 +15,33 @@ Requirements
 Simple steps to create a new autotools project
 ----------------------------------------------
 
+0) Dependencies
+
+```sh
+apt install rsync automake autoconf libtool devscripts dh-make git-buildpackage
+```
+
 1) Clone the repository
 
 2) Give it a quick try:
 
-        ~# bash autogen.sh
-        ~# cd build/
-        ~# ../configure
-        ~# make
-        ~# ./src/my_program
-        ~# make check
-        ~# make install
-        ~# my_program
-        ~# make uninstall
+```sh
+./set-version.sh <major>.<minor>.<patch>
+bash autogen.sh
+cd build/
+../configure
+make
+./src/my_program
+make check
+make install
+my_program
+make uninstall
+```
 
+```sh
+gbp dch -a -N 0.0.2 --git-author
+gbp buildpackage --git-tag --git-export-dir=build-deb
+```
 3) Remove `.git/` folder
 
 4) Change parameters in `configure.ac`, specially `AC_INIT()` ones
